# dye

./: .gitignore  .travis.yml  CHANGELOG.md  README.md
example/: CMakeLists.txt
example/basic-logging/: CMakeLists.txt  dye.h  foo.h  main.cpp
example/basic-profiling/: CMakeLists.txt  bar.cpp  bar.h  dye.h  foo.cpp  main.cpp
example/compiler-assisted/: CMakeLists.txt  bar.cpp  foo.cpp  main.cpp
example/trivial/: CMakeLists.txt  trivial.cpp
include/dye/: basic_dye.hpp  compiler_assist.hpp  logger.hpp  macros.hpp  profile.hpp  profiler.hpp  scope_guard.hpp
include/dye/detail/: macro_uuid.hpp
include/prof/: macros.hpp  profile.hpp
